fixes rte image alignment

--- a/web/app/themes/related-blog/src/styles/_media.scss
+++ b/web/app/themes/related-blog/src/styles/_media.scss
@@ -8,3 +8,50 @@ img {
     display: block;
   }
 }
+
+// RTE
+.module.text-block {
+  h2 {
+    color: $related-midgrey;
+    font-family: $font-family-playfair;
+    font-size: rem(38);
+  }
+
+  a {
+    text-decoration: underline;
+  }
+
+  img {
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
+  }
+
+  .wp-caption {
+    margin-bottom: 1.25rem;
+  }
+
+  .wp-caption-text {
+    color: $related-midgrey;
+    font-size: .8rem;
+    margin-top: -1.25rem;
+  }
+
+  .alignleft {
+    display: inline;
+    float: left;
+    margin-right: 1.5em;
+  }
+
+  .alignright {
+    display: inline;
+    float: right;
+    margin-left: 1.5em;
+  }
+
+  .aligncenter {
+    margin-right: auto !important;
+    margin-left: auto !important;
+    display: block;
+    clear: both;
+  }
+}
