--- a/web/app/themes/related-blog/src/styles/components/_text-block.scss
+++ b/web/app/themes/related-blog/src/styles/components/_text-block.scss
@@ -2,49 +2,4 @@
 
 .module.text-block {
   margin-top: 2rem;
-
-  // RTE
-
-  h2 {
-    color: $related-midgrey;
-    font-family: $font-family-playfair;
-    font-size: rem(38);
-  }
-
-  a {
-    text-decoration: underline;
-  }
-
-  img {
-    margin-top: 1.25rem;
-    margin-bottom: 1.25rem;
-  }
-
-  .wp-caption {
-    margin-bottom: 1.25rem;
-    width: 100% !important;
-  }
-
-  .wp-caption-text {
-    color: $related-midgrey;
-    font-size: .8rem;
-    margin-top: -1.25rem;
-  }
-
-  .alignleft {
-    margin-right: 1.5em;
-    display: inline;
-  }
-
-  .alignright {
-    margin-left: 1.5em;
-    display: inline;
-  }
-
-  .aligncenter {
-    margin-right: auto !important;
-    margin-left: auto !important;
-    display: block;
-    clear: both;
-  }
 }
